Update 0125 algo study

--- a/Study/스터디 정리 템플릿.md
+++ b/Study/스터디 정리 템플릿.md
@@ -1,4 +1,4 @@
-# 2021. 12. 14 알고리즘 스터디
+# 2022. 02. 14 알고리즘 스터디
 
 ## 9048 복호화 [B1]
 
@@ -21,7 +21,7 @@
 
 #### 승호 코드
 
-```python
+```java
 
 ```
 
@@ -67,7 +67,7 @@
 
 #### 승호 코드
 
-```python
+```java
 
 ```
 
@@ -113,7 +113,7 @@
 
 #### 승호 코드
 
-```python
+```java
 
 ```
 
@@ -159,7 +159,7 @@
 
 #### 승호 코드
 
-```python
+```java
 
 ```
 
